syntax = "proto3";

option csharp_namespace = "GrpcUserModel";

package UserModel;

message User {
  string Uuid = 1;
  string Username = 2;
  string Password = 3;
  string Email = 4;
  //string created_at = 5;
  //string updated_at = 6;
  reserved 5 to 6;
  bool IsAdmin = 7;
  bool IsBlocked = 8;
  bool IsDeleted = 9;
}