syntax = "proto3";

option csharp_namespace = "GrpcUserRequest";

package UserRequest;

message GetUsersRequest {
  int32 Page = 1;
  int32 Limit = 2;
}

message GetUserRequest {
  string Guid = 1;
}

message CreateUserRequest {
  string Username = 1;
  string Password = 2;
  string Email = 3;
}

message UpdateUserRequest {
  string Guid = 1;
  string Username = 2;
  string Password = 3;
  string Email = 4;
}

message DeleteUserRequest {
  string Guid = 1;
}