syntax = "proto3";

option csharp_namespace = "GrpcUserResponse";

import "Protos/Users/Models/UserModel.proto";

package UserResponse;

message GetUsersResponse {
  repeated UserModel.User Users = 1;
  int32 Total = 2;
  bool LastPage = 3;
}

message GetUserResponse {
  UserModel.User User = 1;
}

message CreateUserResponse {
  UserModel.User User = 1;
}

message UpdateUserResponse {
  UserModel.User User = 1;
}

message DeleteUserResponse {
  UserModel.User User = 1;
}